# insti-attend

./: .dockerignore  .gitignore  .prettierignore  Dockerfile  Makefile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.ts  tsconfig.json  vite.config.ts
archive/: Attendance.svelte
public/: manifest.json
rxing-wasm/: Cargo.toml
rxing-wasm/src/: lib.rs
src/: App.svelte  app.css  main.ts
src/lib/: Alert.svelte  Attendance.svelte  AutoScanner.svelte  Dock.svelte  ManualEntry.svelte  Modal.svelte  Navbar.svelte  NoCamera.svelte  Scanner.svelte  ScannerOld.svelte  Settings.svelte  State.svelte  alert.svelte.ts  attendance.svelte.ts  cameraUtils.ts  settings.svelte.ts  shared.svelte.ts  store.ts  system.svelte.ts  utils.ts
