[package]
name = "rxing-wasm"
version = "0.8.3"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rxing = { version = "0.8.3", default-features = false, features = [
  "wasm_support",
] }
wasm-bindgen = "0.2.106"
web-sys = { version = "0.3.83", features = [
  "ImageData",
  "OffscreenCanvasRenderingContext2d",
] }

[profile.release]
codegen-units = 1
lto = true
