[package]
name = "rxing-wasm"
version = "0.8.3"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rxing = { version = "0.8.3", default-features = false, features = [
  "wasm_support",
] }
wasm-bindgen = "0.2.108"
web-sys = { version = "0.3.85", features = [
  "ImageData",
  "OffscreenCanvasRenderingContext2d",
] }

[profile.release]
codegen-units = 1
lto = true
