[package]
name = "rxing-wasm"
version = "0.8.5"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rxing = { version = "0.8.5", default-features = false, features = [
  "encoding_rs",
  "wasm_support",
] }
wasm-bindgen = "0.2.114"
web-sys = { version = "0.3.91", features = [
  "ImageData",
  "OffscreenCanvasRenderingContext2d",
] }

[profile.release]
codegen-units = 1
lto = true
